--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,53 @@ img {
 /* --------------------------------------------------- */
 
 @media screen  and (min-width: 360px) and (max-width: 575px) {
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
   #lezioni .row>.left,
   #lezioni .row>.right,
   #steps .row>.left,
-#steps .row>.central,
-#steps .row>.right{
+  #steps .row>.central,
+  #steps .row>.right{
+  width: 100%;
+  padding: 15px;
+}
+
+.row{
+  width: 100%;
+  margin-top: 0;
+  
+}
+#lezioni.container, #why.container {
+  background-color: #fffd8f83;
+}
+
+img {
+  height: 150px;
+}
+
+#steps.container{
+  margin-top: 15px;
+}
+
+#why .row>.first,
+#why .row>.second,
+#why .row>.third {
+  margin-top: 0;
+  padding: 15px;
+}
+}
+
+@media screen and (min-width: 576px) and (max-width: 1199px){
+
+  #lezioni .row>.left,
+  #lezioni .row>.right,
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right{
   width: 100%;
   margin: 5px 0;
 }
@@ -89,5 +130,4 @@ img {
 .row{
   width: 100%;
 }
-
 }
